--- a/templates/default/49-remote.conf.erb
+++ b/templates/default/49-remote.conf.erb
@@ -2,14 +2,17 @@
 <% when "tls" -%>
 $DefaultNetstreamDriver gtls
 $DefaultNetstreamDriverCAFile <%= node['rsyslog']['tls_ca_path'] %>
+$DefaultNetstreamDriverCertFile <%= node['rsyslog']['tls_crt_path'] %>
+$DefaultNetstreamDriverKeyFile <%= node['rsyslog']['tls_key_path'] %>
+$ActionSendStreamDriverPermittedPeer <%= @server_name %>
 
 $ActionSendStreamDriverMode 1 # require TLS for the connection
 $ActionSendStreamDriverAuthMode x509/name
-*.* @@(o)<%= @server %>:<%= node['rsyslog']['client']['server_port'] %>
+*.* @@(o)<%= @server_ip %>:<%= node['rsyslog']['client']['server_port'] %>
 <% when "tcp" -%>
-*.* @@<%= @server %>:<%= node['rsyslog']['client']['server_port'] %>
+*.* @@<%= @server_ip %>:<%= node['rsyslog']['client']['server_port'] %>
 <% when "udp" -%>
-*.* @<%= @server %>:<%= node['rsyslog']['client']['server_port'] %>
+*.* @<%= @server_ip %>:<%= node['rsyslog']['client']['server_port'] %>
 <% end -%>
 
 #
